added language selection to UI
